--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+    // Object feature and model
+    implementation 'com.google.mlkit:object-detection:17.0.0'
+    // Custom model
+    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
