--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -8,12 +9,14 @@ android {
 
     defaultConfig {
         applicationId "com.example.mlkitsample"
-        minSdk 21
+        minSdk 19
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -29,6 +32,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    aaptOptions {
+        noCompress "tflite"
+    }
+
+    sourceSets.main {
+        assets.srcDirs = ['assets']
+    }
+}
+
+androidExtensions {
+    experimental = true
 }
 
 dependencies {
@@ -37,13 +51,21 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
     // Object feature and model
     implementation 'com.google.mlkit:object-detection:17.0.0'
     // Custom model
     implementation 'com.google.mlkit:object-detection-custom:17.0.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "androidx.annotation:annotation:1.3.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    api 'com.google.guava:guava:30.1-jre'
 }
